--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,19 @@
 {
-  "name": "Horário de Saída",
-  "short_name": "Saída",
-  "description": "Aplicação para calcular o horário de saída do trabalho",
-  "start_url": "https://tiagodeazevedoferreira.github.io/CalculoHorarioSaida/",
-  "scope": "/CalculoHorarioSaida/",
+  "name": "App Calculo Horas",
+  "short_name": "CalculoHoras",
+  "start_url": "/AppCalculoHoras/",
+  "scope": "/AppCalculoHoras/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4f46e5",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "./icon.png",
+      "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon.png",
+      "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
